--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,7 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+
+# Config file ignores
+/config/database.yml
+/config/aws.yml
