--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,5 +25,7 @@ jobs:
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
       - name: Set up default config files
         run: bundle exec rake atc:setup:config_files
+      - name: Run db migrations
+        run: RAILS_ENV=test bundle exec rake db:migrate
       - name: Run CI task
         run: bundle exec rspec
