Added new ymls to gitignore and deployment, setup resque wroker restarts on deployment, configured active_job to use resque

--- a/.gitignore
+++ b/.gitignore
@@ -35,5 +35,7 @@
 /config/master.key
 
 # Config file ignores
-/config/database.yml
 /config/aws.yml
+/config/database.yml
+/config/redis.yml
+/config/resque.yml
