Database restructuring and addition of PendingTransfer model; Test additions and refactoring; Added ci.rake to wrap ci setup steps; Rubocop fixes

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -17,3 +17,7 @@ AllCops:
     - 'lib/tasks/**/*'
     - 'tmp/**/*'
 
+
+Metrics/MethodLength:
+  Exclude:
+    - lib/atc/loaders/checksum_loader.rb
