--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,7 +23,5 @@ jobs:
         with:
           ruby-version: ${{ matrix.ruby-version }}
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-      - name: Set up default config files
-        run: bundle exec rake atc:setup:config_files
       - name: Run CI task
-        run: bundle exec rspec
+        run: bundle exec rake atc:ci
