--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -20,4 +20,5 @@ AllCops:
 
 Metrics/MethodLength:
   Exclude:
-    - lib/atc/loaders/checksum_loader.rb
+    - 'lib/atc/loaders/checksum_loader.rb'
+    - 'lib/atc/utils/aws_multipart_checksum_utils.rb'
