Add validation and remediation of object key names

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,6 +24,7 @@ Metrics/MethodLength:
     - 'lib/atc/utils/aws_multipart_checksum_utils.rb'
     - 'lib/atc/aws/s3_uploader.rb'
     - 'lib/atc/utils/aws_checksum_utils.rb'
+    - 'lib/atc/utils/object_key_name_utils.rb'
 
 Rails/Output:
   Exclude:
