--- a/.gitignore
+++ b/.gitignore
@@ -37,6 +37,7 @@
 # Config file ignores
 /config/atc.yml
 /config/aws.yml
+/config/gcp.yml
 /config/database.yml
 /config/redis.yml
 /config/resque.yml
