--- a/config/templates/aws.template.yml
+++ b/config/templates/aws.template.yml
@@ -7,7 +7,7 @@ development:
   aws_access_key_id: 'access_key_id'
   aws_secret_access_key: 'secret_access_key'
   local_path_key_map:
-    '/digital/preservation/': '/'
+    '/digital/preservation/': ''
 
 test:
   <<: *default
@@ -15,4 +15,4 @@ test:
   aws_access_key_id: 'access_key_id'
   aws_secret_access_key: 'secret_access_key'
   local_path_key_map:
-    '/digital/preservation/': '/'
+    '/digital/preservation/': ''
