--- a/config/templates/redis.template.yml
+++ b/config/templates/redis.template.yml
@@ -2,6 +2,7 @@ default: &default
   host: localhost
   port: 6379
   password: null
+  namespace: <%= "#{Rails.application.class.module_parent_name}:#{Rails.env}" %>
 
 development:
   <<: *default
