Add http_base_url to check_please.template.yml file

--- a/config/templates/check_please.template.yml
+++ b/config/templates/check_please.template.yml
@@ -1,6 +1,8 @@
 development:
+  http_base_url: 'http://dev.example.com'
   ws_url: 'ws://dev.example.com/cable'
   auth_token: 'changethis'
 test:
+  http_base_url: 'http://test.example.com'
   ws_url: 'ws://test.example.com/cable'
   auth_token: 'changethis'
